[project]
name = "aaa-2026"
version = "0.1.0"
description = "Repository for the course 'Advanced Analytics and Applications' in Summer Semester 2026"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]
