[project]
name = "aaa-2026"
version = "0.1.0"
description = "Repository for the course 'Advanced Analytics and Applications' in Summer Semester 2026"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.5",
    "drawdata>=0.5.0",
    "geodatasets>=2026.1.0",
    "geopandas>=1.1.3",
    "gymnasium[box2d,classic-control]>=1.3.0",
    "h3>=4.4.2",
    "jupyter>=1.1.1",
    "keras>=3.12.2",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "simpy>=4.1.2",
    "stable-baselines3>=2.9.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
